<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/default_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:layout_width="@dimen/logo_square_dimen"
            android:layout_height="@dimen/logo_square_dimen"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/logo_square_margin"
            android:layout_marginTop="@dimen/logo_square_margin"
            android:contentDescription="@string/description_bugdroid_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_android_robot" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:layout_marginStart="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/default_margin_small"
            android:background="@drawable/card"
            android:elevation="@dimen/default_elevation"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="?android:attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/item_description"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <Button
            android:id="@+id/purchase_button"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/purchase"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <Button
            android:id="@+id/purchase_button_not_invalidated"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/purchase_not_invalidated"
            android:textColor="?android:attr/textColorPrimaryInverse" />

        <TextView
            android:id="@+id/purchase_button_not_invalidated_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:gravity="end"
            android:text="@string/purchase_button_not_invalidated_description"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/confirmation_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:paddingEnd="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:text="@string/purchase_done"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="?android:attr/colorAccent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:paddingEnd="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:text="@string/purchase_done"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="?android:attr/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>